# aoc-2022-c

./: .clang-format  README.md  config.h.in  meson.build
.github/workflows/: c-cpp.yml  c.yml
include/aoc/: better_getline.h  buffer.h  dec01.h  dec02.h  dec03.h  dec04.h  dec05.h  string.h
src/: better_getline.c  dec01.c  dec02.c  dec03.c  dec04.c  dec05.c  main.c  string.c
test/: main.c
